server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opaque
spec:
  type: ClusterIP
  selector:
    app: opaque
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
