server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opaque
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: opaque.bjoernpetersen.net
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: opaque
                port:
                  number: 8080
  tls:
    - hosts:
        - opaque.bjoernpetersen.net
      secretName: pad-cert
